# tinyrenderer

./: .gitignore  CMakeLists.txt  README.md  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  tgaimage.cpp  tgaimage.h  tiny_gl.h
src/: main.cpp
src/core/: model.cpp  model.h  shader.cpp  shader.h  tiny_gl.cpp  tiny_gl.h
src/geometry/: geometry.h  matrix.cpp  matrix.h  vector.h
src/gui/: mainwindow.cpp  mainwindow.h
src/gui/view/: mainwindow.ui
src/loader/: tgaimage.cpp  tgaimage.h
src/model/: model.h
